00_setup/02_mla/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: mla
  name: mla-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
